<?xml version="1.0" encoding="utf-8"?>
<GridLayout
        android:alignmentMode="alignBounds"
        android:columnCount="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1.0"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button



            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@drawable/rounded_left_up"
            android:textAllCaps="false"
            android:text="@string/cos"
            android:textSize="30sp"
            android:id="@+id/button_cos"
    />
    <Button



            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:textAllCaps="false"
            android:text="@string/tg"
            android:textSize="30sp"
            android:id="@+id/button_tg"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@drawable/rounded_right_up"
            android:textAllCaps="false"
            android:text="@string/ln"
            android:textSize="30sp"
            android:id="@+id/button_ln"
    />
    <include layout="@layout/delete"
            android:layout_marginStart="5dp"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/main_include_delete"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:textAllCaps="false"
            android:text="@string/sin"
            android:textSize="30sp"
            android:layout_row="1"
            android:layout_column="0"
            android:id="@+id/button_sin"
    />
    <Button



            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:textAllCaps="false"
            android:text="@string/ctg"
            android:textSize="30sp"
            android:id="@+id/button_ctg"
    />
    <Button



            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:textAllCaps="false"
            android:text="@string/exponent"
            android:textSize="30sp"
            android:id="@+id/button_e"
    />
    <include layout="@layout/divide"
            android:layout_marginStart="5dp"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/main_include_divide"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:textAllCaps="false"
            android:text="@string/arccos"
            android:textSize="30sp"
            android:layout_row="2"
            android:layout_column="0"
            android:id="@+id/button_arccos"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:textAllCaps="false"
            android:text="@string/arctg"
            android:textSize="30sp"
            android:id="@+id/button_arctg"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:textAllCaps="false"
            android:text="@string/power"
            android:textSize="30sp"
            android:id="@+id/button_power"
    />
    <include layout="@layout/multiply"
            android:layout_marginStart="5dp"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/main_include_multiply"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:textAllCaps="false"
            android:text="@string/arcsin"
            android:textSize="30sp"
            android:layout_row="3"
            android:layout_column="0"
            android:id="@+id/button_arcsin"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:textAllCaps="false"
            android:text="@string/arcctg"
            android:textSize="30sp"
            android:id="@+id/button_arcctg"
    />
    <include layout="@layout/x_button"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/main_include_x"
    />
    <include layout="@layout/subtract"
            android:layout_marginStart="5dp"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/main_include_subtract"
    />
    <include layout="@layout/open_bracket"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@drawable/rounded_left_down"
             android:id="@+id/main_include_open"
    />
    <include layout="@layout/close_bracket"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/main_include_close"
    />
    <include layout="@layout/calculate_button"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/main_include_calculate"
    />
    <include layout="@layout/add_button"
            android:layout_marginStart="5dp"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/main_include_add"
    />
</GridLayout>
