<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="20dp"
              android:background="@android:color/transparent"
>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/digits"
            android:background="@android:color/transparent"
            android:layout_weight="1"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/main"
            android:background="@android:color/transparent"
            android:layout_weight="1"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/more"
            android:background="@android:color/transparent"
            android:layout_weight="1"
    />
</LinearLayout>
