<?xml version="1.0" encoding="utf-8"?>
<GridLayout
        android:alignmentMode="alignBounds"
        android:columnCount="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1.0"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@drawable/rounded_left_up"
            android:textAllCaps="false"
            android:text="@string/sh"
            android:textSize="30sp"
            android:id="@+id/button_sh"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:textAllCaps="false"
            android:text="@string/th"
            android:textSize="30sp"
            android:id="@+id/button_th"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@drawable/rounded_right_up"
            android:textAllCaps="false"
            android:text="@string/log"
            android:textSize="30sp"
            android:id="@+id/button_log"
    />
    <include layout="@layout/delete"
            android:layout_marginStart="5dp"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/more_include_delete"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:textAllCaps="false"
            android:text="@string/ch"
            android:textSize="30sp"
            android:layout_row="1"
            android:layout_column="0"
            android:id="@+id/button_ch"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:textAllCaps="false"
            android:text="@string/cth"
            android:textSize="30sp"
            android:id="@+id/button_cth"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:clickable="false"
            android:textAllCaps="false"
            android:text=""
            android:textSize="30sp"
    />
    <include layout="@layout/divide"
            android:layout_marginStart="5dp"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/more_include_divide"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:clickable="false"
            android:textAllCaps="false"
            android:text=""
            android:textSize="30sp"
            android:layout_row="2"
            android:layout_column="0"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:clickable="false"
            android:textAllCaps="false"
            android:text=""
            android:textSize="30sp"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:clickable="false"
            android:textAllCaps="false"
            android:text=""
            android:textSize="30sp"
    />
    <include layout="@layout/multiply"
            android:layout_marginStart="5dp"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/more_include_multiply"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:clickable="false"
            android:textAllCaps="false"
            android:text=""
            android:textSize="30sp"
            android:layout_row="3"
            android:layout_column="0"
    />
    <Button
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:background="@android:color/background_light"
            android:clickable="false"
            android:textAllCaps="false"
            android:text=""
            android:textSize="30sp"
    />
    <include layout="@layout/x_button"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/more_include_x"
    />
    <include layout="@layout/subtract"
            android:layout_marginStart="5dp"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/more_include_subtract"
    />
    <include layout="@layout/open_bracket"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/more_include_open"
    />
    <include layout="@layout/close_bracket"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/more_include_close"
    />
    <include layout="@layout/calculate_button"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/more_include_calculate"
    />
    <include layout="@layout/add_button"
            android:layout_marginStart="5dp"
            android:layout_width="100dp"
            android:layout_height="85dp"
             android:id="@+id/more_include_add"
    />
</GridLayout>
